--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,43 +1,40 @@
-
-name: Build
-
-on:
-  pull_request:
-  push:
-    branches: master
-
 jobs:
   build:
-
-    runs-on: ${{ matrix.os }}
     permissions:
       contents: read
       packages: write
+    runs-on: self-hosted
+    steps:
+    - continue-on-error: true
+      uses: actions/checkout@v3
+    - continue-on-error: true
+      name: Set up Java
+      uses: actions/setup-java@v3
+      with:
+        distribution: zulu
+        java-version: ${{ matrix.java_version }}
+    - continue-on-error: true
+      env:
+        cache-name: maven-cache
+      name: Maven cache
+      uses: actions/cache@v3
+      with:
+        key: build-${{ env.cache-name }}
+        path: ~/.m2
+    - continue-on-error: true
+      name: Maven version
+      run: mvn --version
+    - continue-on-error: true
+      name: Build with Maven
+      run: mvn -T 8 clean test
     strategy:
       fail-fast: false
       matrix:
-        java_version: [11]
-        os: [ubuntu-latest]
-
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up Java
-      uses: actions/setup-java@v3
-      with:
-        java-version: ${{ matrix.java_version }}
-        distribution: 'zulu'
-    - name: Maven cache
-      uses: actions/cache@v3
-      env:
-        cache-name: maven-cache
-      with:
-        path:
-          ~/.m2
-        key: build-${{ env.cache-name }}
-    - name: Maven version
-      run: mvn --version
-#    - name: Maven single test
-#      run: mvn --batch-mode clean verify -Dtest="io.ebeaninternal.server.core.DefaultServer_getReferenceTest" -DfailIfNoTests=false
-    - name: Build with Maven
-      run: mvn -T 8 clean test
-
+        java_version:
+        - 11
+        os:
+        - ubuntu-latest
+name: Build
+on:
+  repository_dispatch:
+    types: trigger-ga___build.yml
