--- a/.github/workflows/jdk-ea.yml
+++ b/.github/workflows/jdk-ea.yml
@@ -1,41 +1,41 @@
-
-name: ebean EA
-
-on:
-  workflow_dispatch:
-  schedule:
-    - cron: '39 6 * * 1,3,5'
-
 jobs:
   build:
-
-    runs-on: ${{ matrix.os }}
     permissions:
       contents: read
       packages: write
+    runs-on: self-hosted
+    steps:
+    - continue-on-error: true
+      uses: actions/checkout@v3
+    - continue-on-error: true
+      name: Set up Java
+      uses: oracle-actions/setup-java@v1
+      with:
+        release: ${{ matrix.java_version }}
+        website: jdk.java.net
+    - continue-on-error: true
+      env:
+        cache-name: maven-cache
+      name: Maven cache
+      uses: actions/cache@v3
+      with:
+        key: build-${{ env.cache-name }}
+        path: ~/.m2
+    - continue-on-error: true
+      name: Maven version
+      run: mvn --version
+    - continue-on-error: true
+      name: Build with Maven
+      run: mvn -T 8 test
     strategy:
       fail-fast: false
       matrix:
-        java_version: [GA,EA]
-        os: [ubuntu-latest]
-
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up Java
-      uses: oracle-actions/setup-java@v1
-      with:
-        website: jdk.java.net
-        release: ${{ matrix.java_version }}
-    - name: Maven cache
-      uses: actions/cache@v3
-      env:
-        cache-name: maven-cache
-      with:
-        path:
-          ~/.m2
-        key: build-${{ env.cache-name }}
-    - name: Maven version
-      run: mvn --version
-    - name: Build with Maven
-      run: mvn -T 8 test
-
+        java_version:
+        - GA
+        - EA
+        os:
+        - ubuntu-latest
+name: ebean EA
+on:
+  repository_dispatch:
+    types: trigger-ga___jdk-ea.yml
