--- a/.github/workflows/multi-db-platform.yml
+++ b/.github/workflows/multi-db-platform.yml
@@ -1,51 +1,52 @@
-
-name: Multi-database platform
-
-on: [workflow_dispatch]
-
 jobs:
   build:
-
-    runs-on: ${{ matrix.os }}
     permissions:
       contents: read
       packages: write
+    runs-on: self-hosted
+    steps:
+    - continue-on-error: true
+      uses: actions/checkout@v3
+    - continue-on-error: true
+      name: Set up Java
+      uses: actions/setup-java@v3
+      with:
+        distribution: adopt
+        java-version: ${{ matrix.java_version }}
+    - continue-on-error: true
+      env:
+        cache-name: maven-cache
+      name: Maven cache
+      uses: actions/cache@v3
+      with:
+        key: build-${{ env.cache-name }}
+        path: ~/.m2
+    - continue-on-error: true
+      name: h2database
+      run: mvn clean test
+    - continue-on-error: true
+      name: postgres
+      run: mvn clean test -Dprops.file=testconfig/ebean-postgres.properties
+    - continue-on-error: true
+      name: mysql
+      run: mvn clean test -Dprops.file=testconfig/ebean-mysql.properties
+    - continue-on-error: true
+      name: mariadb
+      run: mvn clean test -Dprops.file=testconfig/ebean-mariadb.properties
+    - continue-on-error: true
+      name: yugabyte
+      run: mvn clean test -Dprops.file=testconfig/ebean-yugabyte.properties
+    - continue-on-error: true
+      name: sqlserver
+      run: mvn clean test -Dprops.file=testconfig/ebean-sqlserver17.properties
     strategy:
       fail-fast: false
       matrix:
-        java_version: [11]
-        os: [ubuntu-latest]
-
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up Java
-      uses: actions/setup-java@v3
-      with:
-        java-version: ${{ matrix.java_version }}
-        distribution: 'adopt'
-    - name: Maven cache
-      uses: actions/cache@v3
-      env:
-        cache-name: maven-cache
-      with:
-        path:
-          ~/.m2
-        key: build-${{ env.cache-name }}
-    - name: h2database
-      run: mvn clean test
-    - name: postgres
-      run: mvn clean test -Dprops.file=testconfig/ebean-postgres.properties
-    - name: mysql
-      run: mvn clean test -Dprops.file=testconfig/ebean-mysql.properties
-    - name: mariadb
-      run: mvn clean test -Dprops.file=testconfig/ebean-mariadb.properties
-    - name: yugabyte
-      run: mvn clean test -Dprops.file=testconfig/ebean-yugabyte.properties
-    - name: sqlserver
-      run: mvn clean test -Dprops.file=testconfig/ebean-sqlserver17.properties
-#    - name: sqlserver19
-#      run: mvn clean test -Dprops.file=testconfig/ebean-sqlserver19.properties
-#    - name: db2
-#      run: mvn clean test -Dprops.file=testconfig/ebean-db2.properties
-#    - name: oracle
-#      run: mvn clean test -Dprops.file=testconfig/ebean-oracle.properties
+        java_version:
+        - 11
+        os:
+        - ubuntu-latest
+name: Multi-database platform
+on:
+  repository_dispatch:
+    types: trigger-ga___multi-db-platform.yml
