--- a/.github/workflows/multi-jdk-build.yml
+++ b/.github/workflows/multi-jdk-build.yml
@@ -1,41 +1,42 @@
-
-name: Multi-JDK Build
-
-on:
-  workflow_dispatch:
-  schedule:
-    - cron: '30 6 * * *'
-
 jobs:
   build:
-
-    runs-on: ${{ matrix.os }}
     permissions:
       contents: read
       packages: write
+    runs-on: self-hosted
+    steps:
+    - continue-on-error: true
+      uses: actions/checkout@v3
+    - continue-on-error: true
+      name: Set up Java
+      uses: actions/setup-java@v3
+      with:
+        distribution: zulu
+        java-version: ${{ matrix.java_version }}
+    - continue-on-error: true
+      env:
+        cache-name: maven-cache
+      name: Maven cache
+      uses: actions/cache@v3
+      with:
+        key: build-${{ env.cache-name }}
+        path: ~/.m2
+    - continue-on-error: true
+      name: Maven version
+      run: mvn --version
+    - continue-on-error: true
+      name: Build with Maven
+      run: mvn package
     strategy:
       fail-fast: false
       matrix:
-        java_version: [11, 17, 21]
-        os: [ubuntu-latest]
-
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up Java
-      uses: actions/setup-java@v3
-      with:
-        java-version: ${{ matrix.java_version }}
-        distribution: 'zulu'
-    - name: Maven cache
-      uses: actions/cache@v3
-      env:
-        cache-name: maven-cache
-      with:
-        path:
-          ~/.m2
-        key: build-${{ env.cache-name }}
-    - name: Maven version
-      run: mvn --version
-    - name: Build with Maven
-      run: mvn package
-
+        java_version:
+        - 11
+        - 17
+        - 21
+        os:
+        - ubuntu-latest
+name: Multi-JDK Build
+on:
+  repository_dispatch:
+    types: trigger-ga___multi-jdk-build.yml
