--- a/.github/workflows/sqlserver-2019.yml
+++ b/.github/workflows/sqlserver-2019.yml
@@ -1,35 +1,37 @@
-
-name: SqlServer 2019
-
-on: [workflow_dispatch]
-
 jobs:
   build:
-
-    runs-on: ${{ matrix.os }}
     permissions:
       contents: read
       packages: write
+    runs-on: self-hosted
+    steps:
+    - continue-on-error: true
+      uses: actions/checkout@v3
+    - continue-on-error: true
+      name: Set up Java
+      uses: actions/setup-java@v3
+      with:
+        distribution: adopt
+        java-version: ${{ matrix.java_version }}
+    - continue-on-error: true
+      env:
+        cache-name: maven-cache
+      name: Maven cache
+      uses: actions/cache@v3
+      with:
+        key: build-${{ env.cache-name }}
+        path: ~/.m2
+    - continue-on-error: true
+      name: sqlserver 2019 latest
+      run: mvn clean test -Dprops.file=testconfig/ebean-sqlserver19.properties
     strategy:
       fail-fast: false
       matrix:
-        java_version: [11]
-        os: [ubuntu-latest]
-
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up Java
-      uses: actions/setup-java@v3
-      with:
-        java-version: ${{ matrix.java_version }}
-        distribution: 'adopt'
-    - name: Maven cache
-      uses: actions/cache@v3
-      env:
-        cache-name: maven-cache
-      with:
-        path:
-          ~/.m2
-        key: build-${{ env.cache-name }}
-    - name: sqlserver 2019 latest
-      run: mvn clean test -Dprops.file=testconfig/ebean-sqlserver19.properties
+        java_version:
+        - 11
+        os:
+        - ubuntu-latest
+name: SqlServer 2019
+on:
+  repository_dispatch:
+    types: trigger-ga___sqlserver-2019.yml
